force-app/main/default/objects/Validation__c/Validation__c.object-meta.xml
<CustomObject>
    <description>Объект Validation необходим для реализации связки вопросов и логики отображения некоторых. Имеет ссылку на вопрос поставщика зависимости SurveyQuestion, ссылку на зависимый вопрос того же типа и условие в виде строки.
Объект Answer содержит ответ пользователя на определенный вопрос. Связан с Survey Question и ссылается на GroupAnswer.</description>
    <label>Validation</label>
    <nameField>
        <label>Validation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Validations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>