force-app/main/default/objects/Validation__c/fields/Condition__c.field-meta.xml
<CustomField>
    <fullName>Condition__c</fullName>
    <description>Функция для условия отображения связанного вопроса в виде строки.</description>
    <label>Condition</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>