force-app/main/default/objects/Validation__c/fields/Dependent_Question__c.field-meta.xml
<CustomField>
    <fullName>Dependent_Question__c</fullName>
    <description>Link to dependent question.</description>
    <label>Dependent Question</label>
    <referenceTo>Question__c</referenceTo>
    <relationshipLabel>Validations</relationshipLabel>
    <relationshipName>Dependent_Question_Validations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>