force-app/main/default/objects/Validation__c/fields/Related_Question__c.field-meta.xml
<CustomField>
    <fullName>Related_Question__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Question</label>
    <referenceTo>Question__c</referenceTo>
    <relationshipLabel>Validations (Related Question)</relationshipLabel>
    <relationshipName>Validations1</relationshipName>
    <type>Lookup</type>
</CustomField>