force-app/main/default/objects/Validation__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Related_Question__c</columns>
    <columns>Dependent_Question__c</columns>
    <columns>Condition__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>